# mangaServer

./: .Main.hs.swp  .MangafoxParser.hs.swp  .run.sh.swp  ChapterDocument.hs  ChapterListDocument.hs  Main.hi  Main.hs  MainBeforeCouch.hs  MangaDocument.hs  MangaView.hs  MangafoxParser.hs  README.md  Utils.hs  background.js  cabal.sandbox.config  compRun.sh  design_chapters.json  design_manga.json  drawText.sh  mangaServer.cabal  mangas.txt  refillDB.sh  run.sh  specs.txt  test.json  views.json
CouchUtils/: CouchUtils.cabal  CouchUtils.hs  cabal.sandbox.config
CouchUtils/.cabal-sandbox/x86_64-osx-ghc-7.6.3-packages.conf.d/: aeson-0.6.2.1-920148c22d8ce10b10494f2b3b028229.conf  asn1-encoding-0.9.0-19313b31a8cbe785723bf8b742b37be9.conf  asn1-parse-0.9.0-08fb63421ea6f36802d02006c4ac34ed.conf  asn1-types-0.3.0-7fe448211a90e4b4df739eed0e682b9c.conf  attoparsec-0.11.3.4-e2c78b0ffc20029b092a1be261925f3f.conf  base64-bytestring-1.0.0.1-d8663f25803ff0c562088bf420ad1d50.conf  blaze-builder-0.3.3.4-469a2137adeff592c0de05e00003259f.conf  byteable-0.1.1-c67afab30659102f9725139d9bb727f7.conf  bytestring-0.10.4.0-ed2cdaee92d93aa8dd61a235896c69e3.conf  case-insensitive-1.2.0.1-eecd6c6b553398340791ee4507d0c85d.conf  cereal-0.4.1.0-4e7ea7e3f0e227110bf88816de5b54ee.conf  cipher-aes-0.2.9-d23c64c7274525670713dc35670b6684.conf  cipher-des-0.0.6-ab5adde76323292b37d42d4a1bb3879d.conf  cipher-rc4-0.1.4-85fec88f09062d4826c01a0a4ceaea3d.conf  conduit-1.2.1-9b1fcd6bb9489c4bde4477c47a2a3b19.conf  connection-0.2.3-6ffe4500f0ec04e5791559cb46c7df61.conf  (+53 more)
(+4449 files in other folders)
