name:                CouchUtils
version:             0.1.0.0
author:              Raphaël Mongeau
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     CouchUtils
  other-extensions:    DeriveGeneric, OverloadedStrings
  build-depends:       base >=4.6 && <4.7, text >=0.11 && <0.12, case-insensitive ==1.2.0.1, bytestring ==0.10.4.0, http-conduit ==2.1.4.5, aeson
  default-language:    Haskell2010
